// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card/> component renders correctly 1`] = `
<DocumentFragment>
  <div
    class="chakra-card css-1jvhf43"
    data-testid="Card"
    description="Card description"
    title="Card title"
  >
    <div
      class="chakra-card__header css-18f68ux"
    >
      <div
        class="css-14w3rw9"
      >
        <span
          class="chakra-avatar css-gi3kny"
        >
          <svg
            aria-label=" avatar"
            class="chakra-avatar__svg css-16ite8i"
            role="img"
            viewBox="0 0 128 128"
          >
            <path
              d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
              fill="currentColor"
            />
            <path
              d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chakra-card__body css-bwepl0"
    >
      <div
        class="chakra-stack css-tl3ftk"
      >
        <p
          class="css-1qbkn0c"
        >
          Card title
        </p>
        <p
          class="css-81w022"
        >
          Card description
        </p>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Card/> component renders correctly with header: WithHeader 1`] = `
<DocumentFragment>
  <div
    class="chakra-card css-1jvhf43"
    data-testid="Card"
    description="Card description"
    title="Card title"
  >
    <div
      class="chakra-card__header css-18f68ux"
    >
      <div
        class="css-14w3rw9"
      >
        <span
          class="chakra-avatar css-gi3kny"
        >
          <svg
            aria-label=" avatar"
            class="chakra-avatar__svg css-16ite8i"
            role="img"
            viewBox="0 0 128 128"
          >
            <path
              d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
              fill="currentColor"
            />
            <path
              d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chakra-card__body css-bwepl0"
    >
      <div
        class="chakra-stack css-tl3ftk"
      >
        <p
          class="css-1qbkn0c"
        >
          Card title
        </p>
        <p
          class="css-81w022"
        >
          Card description
        </p>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Card/> component renders correctly with img: WithImg 1`] = `
<DocumentFragment>
  <div
    class="chakra-card css-1jvhf43"
    data-testid="Card"
    description="Card description"
    title="Card title"
  >
    <div
      class="chakra-card__header css-18f68ux"
    >
      <div
        class="css-14w3rw9"
      >
        <span
          class="chakra-avatar css-gi3kny"
        >
          <svg
            aria-label=" avatar"
            class="chakra-avatar__svg css-16ite8i"
            role="img"
            viewBox="0 0 128 128"
          >
            <path
              d="M103,102.1388 C93.094,111.92 79.3504,118 64.1638,118 C48.8056,118 34.9294,111.768 25,101.7892 L25,95.2 C25,86.8096 31.981,80 40.6,80 L87.4,80 C96.019,80 103,86.8096 103,95.2 L103,102.1388 Z"
              fill="currentColor"
            />
            <path
              d="M63.9961647,24 C51.2938136,24 41,34.2938136 41,46.9961647 C41,59.7061864 51.2938136,70 63.9961647,70 C76.6985159,70 87,59.7061864 87,46.9961647 C87,34.2938136 76.6985159,24 63.9961647,24"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="chakra-card__body css-bwepl0"
    >
      <div
        class="chakra-stack css-tl3ftk"
      >
        <p
          class="css-1qbkn0c"
        >
          Card title
        </p>
        <p
          class="css-81w022"
        >
          Card description
        </p>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Card/> component renders correctly with isLoading: WithIsLoading 1`] = `
<DocumentFragment>
  <div
    class="chakra-card css-1jvhf43"
    data-testid="Card"
    description="Card description"
    title="Card title"
  >
    <div
      class="chakra-card__header css-18f68ux"
    >
      <div
        class="css-14w3rw9"
      >
        <div
          class="chakra-skeleton css-1536nqa"
        />
      </div>
    </div>
    <div
      class="chakra-card__body css-bwepl0"
    >
      <div
        class="chakra-spinner css-18f4w0n"
        data-testid="spinner"
      >
        <span
          class="css-8b45rq"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
